# console

./: .gitignore  CMakeLists.txt  build.sh
Console/: AboutDlg.cpp  CMakeLists.txt  Console.rc  ConsoleHandler.cpp  DlgSettingsAppearance.cpp  DlgSettingsFont.cpp  DlgSettingsFullScreen.cpp  DlgSettingsMouse.cpp  DlgSettingsTabs.cpp  DynamicSnippetDialog.h  Helpers.cpp  Helpers.h  ImageHandler.cpp  PageSettingsTabs1.cpp  PageSettingsTabs2.cpp  PageSettingsTabsColors.cpp  SelectionHandler.cpp  SettingsHandler.h  Snippet.cpp  Snippet.h  Wallpaper.cpp  Wallpaper.h  multisplit.h  stdafx.h
ConsoleHook/: CMakeLists.txt  ConsoleHandler.cpp
ConsoleWow/: CMakeLists.txt
FreeImage/: CMakeLists.txt
TabbingFramework/: CMakeLists.txt  CustomTabCtrl.h  DotNetTabCtrl.h  TabbedFrame.h  TabbedMDISave.cpp  stdafx.h
cmake/: Toolchain-llvm-mingw.cmake
shared/: CMakeLists.txt  Cpp11Helpers.h  NamedPipe.h  stdafx.h
wtl/: CMakeLists.txt
